@@ -392,6 +392,7 @@ source "package/liburcu/Config.in"
 source "package/lttng-libust/Config.in"
 source "package/orc/Config.in"
 source "package/poco/Config.in"
+source "package/protobuf/Config.in"
 source "package/startup-notification/Config.in"
 endmenu
 
